fix pagination for invisible runs

--- a/tensorboard_plugin_geometry/static/src/app/sidebar/sidebar.scss
+++ b/tensorboard_plugin_geometry/static/src/app/sidebar/sidebar.scss
@@ -19,6 +19,12 @@
       overflow-wrap: anywhere;
     }
 
+    .run {
+      margin: 8px 0;
+      font-size: 12px;
+      line-height: 15px;
+    }
+
     .point_size {
       .md-slider {
         width: calc(70% - 5px);
